--- a/Translation/map.json
+++ b/Translation/map.json
@@ -2203,6 +2203,25 @@
         "th":"",
         "id":""
     },
+    "map.C5_Icehouse.name":{
+        "en":"Ice House",
+        "fr":"Maison de Glace",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.C5_Icehouse_Floor_1.name":{
         "en":"Ice House Floor 1",
         "fr":"Maison de Glace Etage 1",
