--- a/Translation/item.json
+++ b/Translation/item.json
@@ -7110,6 +7110,424 @@
 		"th":"",
 		"id":""
 	},
+  	"item.3125.name":{
+		"en":"[Spirit Egg] Ice Slime",
+		"fr":"[Oeuf d'esprit] Slime Gelé",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3126.name":{
+		"en":"[Spirit Egg] Ice Crab",
+		"fr":"[Oeuf d'esprit] Crabe Gelé",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3127.name":{
+		"en":"[Spirit Egg] Snow Pirate",
+		"fr":"[Oeuf d'esprit] Pirate des Neige",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3128.name":{
+		"en":"[Spirit Egg] Tundra Bear",
+		"fr":"[Oeuf d'esprit] Ours de la Toundra",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3129.name":{
+		"en":"[Spirit Egg] Tundra Wolf",
+		"fr":"[Oeuf d'esprit] Loup de la Toundra",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3130.name":{
+		"en":"[Spirit Egg] Snowman",
+		"fr":"[Oeuf d'esprit] Bonhomme de neige",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3131.name":{
+		"en":"[Spirit Egg] Ice Bat",
+		"fr":"[Oeuf d'esprit] Chauve-souris Gelé",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3132.name":{
+		"en":"[Spirit Egg] Ice Hartland",
+		"fr":"[Oeuf d'esprit] Hartland Gelé",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3133.name":{
+		"en":"[Spirit Egg] Ice Spider",
+		"fr":"[Oeuf d'esprit] Araignée Gelée",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3134.name":{
+		"en":"[Spirit Egg] Goliath",
+		"fr":"[Oeuf d'esprit] Goliath",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3135.name":{
+		"en":"[Spirit Egg] Steel Apeman",
+		"fr":"[Oeuf d'esprit] Singe d'Acier",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3136.name":{
+		"en":"[Spirit Egg] Ice Golem",
+		"fr":"[Oeuf d'esprit] Golem Gelé",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3137.name":{
+		"en":"[Spirit Egg] Snow Dragon",
+		"fr":"[Oeuf d'esprit] Dragon des Neige",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3138.name":{
+		"en":"[Spirit Egg] Demoniac Guard",
+		"fr":"[Oeuf d'esprit] Garde Démoniaque",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3139.name":{
+		"en":"[Spirit Egg] Demoniac Ranger",
+		"fr":"[Oeuf d'esprit] Archer Démoniaque",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3140.name":{
+		"en":"[Spirit Egg] Skeleton Marksman",
+		"fr":"[Oeuf d'esprit] Tireur d'élite Squelette",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3141.name":{
+		"en":"[Spirit Egg] Skeleton Soldier",
+		"fr":"[Oeuf d'esprit] Soldat Squelette",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3142.name":{
+		"en":"[Spirit Egg] Skeleton Rider",
+		"fr":"[Oeuf d'esprit] Cavalier Squelette",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3143.name":{
+		"en":"[Spirit Egg] Skeleton Wizard",
+		"fr":"[Oeuf d'esprit] Sorcier Squelette",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3144.name":{
+		"en":"[Spirit Egg] Lesser Flesh Pincer",
+		"fr":"[Oeuf d'esprit] Petit Pinceur de Chair",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3145.name":{
+		"en":"[Spirit Egg] Disgusting Bat",
+		"fr":"[Oeuf d'esprit] Chauve-souris Dégoûtante",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3146.name":{
+		"en":"[Spirit Egg] Tourmented Spirit",
+		"fr":"[Oeuf d'esprit] Esprit Tourmenté",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
     "item.3801.name":{
         "en":"[Spirit Egg] Immortal",
         "fr":"[Oeuf d'esprit] Immortel",
@@ -9593,6 +10011,424 @@
 		"jp":"",
 		"pt":"",
 		"vi":"Thủy Thần Đèn",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+    "item.4125.name":{
+		"en":"Ice Slime",
+		"fr":"Slime Gelé",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4126.name":{
+		"en":"Ice Crab",
+		"fr":"Crabe Gelé",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4127.name":{
+		"en":"Snow Pirate",
+		"fr":"Pirate des Neige",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4128.name":{
+		"en":"Tundra Bear",
+		"fr":"Ours de la Toundra",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4129.name":{
+		"en":"Tundra Wolf",
+		"fr":"Loup de la Toundra",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4130.name":{
+		"en":"Snowman",
+		"fr":"Bonhomme de neige",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4131.name":{
+		"en":"Ice Bat",
+		"fr":"Chauve-souris Gelé",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4132.name":{
+		"en":"Ice Hartland",
+		"fr":"Hartland Gelé",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4133.name":{
+		"en":"Ice Spider",
+		"fr":"Araignée Gelée",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4134.name":{
+		"en":"Goliath",
+		"fr":"Goliath",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4135.name":{
+		"en":"Steel Apeman",
+		"fr":"Singe d'Acier",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4136.name":{
+		"en":"Ice Golem",
+		"fr":"Golem Gelé",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4137.name":{
+		"en":"Snow Dragon",
+		"fr":"Dragon des Neige",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4138.name":{
+		"en":"Demoniac Guard",
+		"fr":"Garde Démoniaque",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4139.name":{
+		"en":"Demoniac Ranger",
+		"fr":"Archer Démoniaque",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4140.name":{
+		"en":"Skeleton Marksman",
+		"fr":"Tireur d'élite Squelette",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4141.name":{
+		"en":"Skeleton Soldier",
+		"fr":"Soldat Squelette",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4142.name":{
+		"en":"Skeleton Rider",
+		"fr":"Cavalier Squelette",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4143.name":{
+		"en":"Skeleton Wizard",
+		"fr":"Sorcier Squelette",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4144.name":{
+		"en":"Lesser Flesh Pincer",
+		"fr":"Petit Pinceur de Chair",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4145.name":{
+		"en":"Disgusting Bat",
+		"fr":"Chauve-souris Dégoûtante",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4146.name":{
+		"en":"Tourmented Spirit",
+		"fr":"Esprit Tourmenté",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
 		"ar":"",
 		"it":"",
 		"pl":"",
