Spirit egg chief 70

--- a/Translation/item.json
+++ b/Translation/item.json
@@ -7528,6 +7528,120 @@
 		"th":"",
 		"id":""
 	},
+    "item.3147.name":{
+        "en":"[Spirit Egg] Renowned Engineer",
+        "fr":"[Oeuf d'esprit] Ingénieur de renom",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3148.name":{
+        "en":"[Spirit Egg] Snowland Unicorn",
+        "fr":"[Oeuf d'esprit] Licorne des Terres Enneigées",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3149.name":{
+        "en":"[Spirit Egg] Adult Frost Dragon",
+        "fr":"[Oeuf d'esprit] Dragon de Givre Adulte",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3150.name":{
+        "en":"[Spirit Egg] Roland Spellsword",
+        "fr":"[Oeuf d'esprit] Roland Spellsword",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3151.name":{
+        "en":"[Spirit Egg] Demoniac Leader",
+        "fr":"[Oeuf d'esprit] Leader démoniaque",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3512.name":{
+        "en":"[Spirit Egg] Halo City Guard Captain",
+        "fr":"[Oeuf d'esprit] Capitaine de la garde de Halo",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.3801.name":{
         "en":"[Spirit Egg] Immortal",
         "fr":"[Oeuf d'esprit] Immortel",
@@ -10435,6 +10549,120 @@
 		"th":"",
 		"id":""
 	},
+    "item.4147.name":{
+        "en":"Renowned Engineer",
+        "fr":"Ingénieur de renom",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4148.name":{
+        "en":"Snowland Unicorn",
+        "fr":"Licorne des Terres Enneigées",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.449.name":{
+        "en":"Adult Frost Dragon",
+        "fr":"Dragon de Givre Adulte",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4150.name":{
+        "en":"Roland Spellsword",
+        "fr":"Roland Spellsword",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4151.name":{
+        "en":"Demoniac Leader",
+        "fr":"Leader démoniaque",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4512.name":{
+        "en":"Halo City Guard Captain",
+        "fr":"Capitaine de la garde de Halo",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.4801.name":{
         "en":"Immortal",
         "fr":"Immortel",
