Spirit egg boss 70

--- a/Translation/item.json
+++ b/Translation/item.json
@@ -7756,6 +7756,63 @@
         "th":"",
         "id":""
     },
+    "item.4807.name":{
+        "en":"[Spirit Egg] Gravekeeper",
+        "fr":"[Oeuf d'esprit] Gardien du Tombeau",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4808.name":{
+        "en": "[Spirit Egg] Gaia",
+        "fr": "[Oeuf d'esprit] Gaia",
+        "es": "",
+        "zh-cn": "[精灵蛋] 盖娅",
+        "zh-tw": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "[Linh Trứng] Địa Mẫu Gaia",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4809.name":{
+        "en": "[Spirit Egg] Soul of the Corrupted Emperor",
+        "fr": "[Oeuf d'esprit] Âme de l'Empereur Corrompu",
+        "es": "",
+        "zh-cn": "[精灵蛋] 腐朽帝王的灵魂",
+        "zh-tw": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "[Linh Trứng] Vong Linh Hoàng Đế Phế Vị",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
     "item.4000.name":{
         "en":"Pudding Slime",
         "fr":"Slime Pudding",
@@ -10758,7 +10815,6 @@
         "th":"",
         "id":""
     },
-    
     "item.4806.name":{
         "en":"Flame Lord Leo",
         "fr":"Seigneur des Flames Leo",
@@ -10777,6 +10833,63 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "item.4807.name":{
+        "en":"Gravekeeper",
+        "fr":"Gardien du Tombeau",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4808.name":{
+        "en": "Gaia",
+        "fr": "Gaia",
+        "es": "Gaia",
+        "zh-cn": "盖娅",
+        "zh-tw": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "Gaia",
+        "jp": "",
+        "pt": "",
+        "vi": "Địa Mẫu Gaia",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4809.name":{
+        "en": "Soul of the Corrupted Emperor",
+        "fr": "Âme de l'Empereur Corrompu",
+        "es": "Alma del Emperador Corrupto",
+        "zh-cn": "腐朽帝王的灵魂",
+        "zh-tw": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "Seele des korrupten Imperators",
+        "jp": "",
+        "pt": "",
+        "vi": "Vong Linh Hoàng Đế Phế Vị",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
     },
     "item.4901.name":{
         "en":"Spirit Stat Book [HP]",
